--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 			var responseDiv = document.getElementById("response");
 			responseDiv.scrollTop = responseDiv.scrollHeight;
 		}
-		else if (message.indexOf('&@ct') > -1)
+		else if (message.indexOf('&ct') > -1)
 		{
 			$('#loading').addClass('d-none');
 			$('#dashboard').removeClass('d-none');
@@ -243,7 +243,7 @@
 		if (SMS) SMS.sendSMS(mobNo, "actsys @ct",
 		function () 
 		{ 
-			$('#login').addClass('d-none');
+			$('#dashboard').addClass('d-none');
 			$('#loading').removeClass('d-none');
 			$('#response').append('<br>Activation command sent.');
 			$('#response').append('<br>Waiting for response...');
@@ -269,14 +269,12 @@
 
 	function deactivate()
 	{
-		$('#dashboard').addClass('d-none');
-		$('#loading').removeClass('d-none');
 		$('#response').append('<br>Sending deactivation command...');
 
-		if (SMS) SMS.sendSMS(mobNo, "dactsys &@ct",
+		if (SMS) SMS.sendSMS(mobNo, "dactsys &ct",
 		function () 
 		{ 
-			$('#login').addClass('d-none');
+			$('#dashboard').addClass('d-none');
 			$('#loading').removeClass('d-none');
 			$('#response').append('<br>Deactivation command sent.');
 			$('#response').append('<br>Waiting for response...');
