--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
 
 			document.addEventListener('onSMSArrive', function (e)
 			{
-				// if(e.data.address.indexOf(mobNo)>-1)
 				commandParse(e.data.body);
 			});
 
@@ -191,7 +190,8 @@
 
 	function commandParse(message)
 	{
-		if (message.indexOf('00617574686f7269736564') > -1) //authorised
+		// if (message.indexOf('00617574686f7269736564') > -1) //authorised
+		if (message.indexOf('1234') > -1)
 		{
 			$('#loading').addClass('d-none');
 			$('#congratz').removeClass('d-none');
