--- a/index.html
+++ b/index.html
@@ -10,39 +10,47 @@
 </head>
 
 <body screen="login">
-
 	<div data-role="page" id="first-page">
+		<div data-role="header" data-position="fixed" data-theme="b">
+			<h1>First page</h1>
+		</div>
 		<div role="main" class="ui-content">
-			<h1>Pages</h1>
-			<h2>Page 1</h2>
-			<p>jQuery Mobile is built around the concept of pages: units of content and navigation.
-			</p>
-			<p>Pages are defined by adding the "data-role" attribute to a div and defining an id. Inside a page we can have
-				different types of elements, but the main content goes into a div with a "class" of "ui-content"</p>
-			<p>We can allow users to navigate through pages simply by inserting a link to the id of the page</p>
-			<p>View internal page called <a href="#second-page">Second</a></p>
+			<p>Toward the end of the year 1920 the Government of the United States had
+				practically completed the programme, adopted during the last months of
+				President Winthrop's administration. The country was apparently tranquil.
+				Everybody knows how the Tariff and Labour questions were settled.</a></p>
+			<p>By default, buttons are block elements, but we can make them inline with data-inline="true": <a data-role="button"
+				 data-inline="true" href="#second-page">Also goes to second page</a></p>
+			<p>The war
+				with Germany, incident on that country's seizure of the Samoan Islands,
+				had left no visible scars upon the republic, and the temporary occupation
+				of Norfolk by the invading army had been forgotten in the joy over
+				repeated naval victories, and the subsequent ridiculous plight of General
+				Von Gartenlaube's forces in the State of New Jersey.<a data-role="button" data-inline="true" data-icon="arrow-r"
+				 href="#second-page">Another
+					one goes to second page</a></p>
+		</div>
+		<div data-role="footer" data-position="fixed" data-theme="b">
+			<h4>Page Footer</h4>
 		</div>
 	</div>
 
 	<div data-role="page" id="second-page">
-		<div role="main" class="ui-content">
-			<h1>Pages</h1>
-			<h2>Page 2</h2>
-			<p>I'm the second in the source order so I'm hidden when the page loads. I'm just shown if a link that references my
-				id is beeing clicked.</p>
-			<p><a href="#first-page">Back to First</a></p>
-			<p><a href="#third-page">Forward to Third</a></p>
+		<div data-role="header" data-position="fixed" data-theme="b">
+			<h1>Second page</h1>
 		</div>
-	</div>
-
-	<div data-role="page" id="third-page">
 		<div role="main" class="ui-content">
-			<h1>Pages</h1>
-			<h2>Page 3</h2>
-			<p>I'm the third in the source order so I'm hidden when the page loads. I'm just shown if a link that references my
-				id is beeing clicked.</p>
-			<p><a href="#first-page">Back to First</a></p>
-			<p><a href="#second-page">Back to Second</a></p>
+			<p>I had walked down that day from Dr. Archer's house on Madison Avenue,
+				where I had been as a mere formality. Ever since that fall from my horse,
+				four years before, I had been troubled at times with pains in the back of
+				my head and neck, but now for months they had been absent, and the doctor
+				sent me away that day saying there was nothing more to be cured in me. It
+				was hardly worth his fee to be told that; I knew it myself.</p>
+			<p><a data-role="button" data-icon="arrow-l" data-inline="true" href="#first-page">Go back</a></p>
+		</div>
+
+		<div data-role="footer" data-position="fixed" data-theme="b">
+			<h4>Page Footer</h4>
 		</div>
 	</div>
 
